Fixed skills icons width and alignment in skills list

--- a/src/components/homepage/Skills.module.css
+++ b/src/components/homepage/Skills.module.css
@@ -58,3 +58,14 @@
 	align-items: center;
 	gap: 3rem;
 }
+
+.icon__container {
+	width: 5vw;
+	display: flex;
+	justify-content: center;
+}
+
+.icon {
+	font-size: 5rem;
+	color: var(--heading-primary);
+}
